# Argparser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE.md  README.md  SECURITY.md  main.cpp
.github/workflows/: c-cpp.yml
argparser/: CMakeLists.txt
argparser/include/: argdouble.h  argflag.h  argint.h  argparser.h  argstring.h  argument.h  typedef.h
argparser/src/: argdouble.cpp  argflag.cpp  argint.cpp  argparser.cpp  argstring.cpp  argument.cpp
test/: CMakeLists.txt  test_argdouble.cpp  test_argflag.cpp  test_argint.cpp  test_argparser.cpp  test_argstring.cpp
